--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <script src="main.js"></script>
 </head>
 <body>
-<header>
+      <div class="image">
+           <img src="brokenheart.png" alt="brokenheart" class="center">
+       </div>
+
+       <header>
     <div id="Name">Words to live by...
     <p>Lessons learned during nonsense chats with Betts</p>
-        <div id="image">
-            <img src="brokenheart.png" class=overlay>
-
-        </div>
-     </div>
+    
 </header>
 <p>
 
