image layout edit
centered image and
change section background color

--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
     href="C:\Users\jasmi\OneDrive\Documents\code\MyPortfolio\css\MyPortfolio-style.css" />
     <script src="main.js"></script>
 </head>
+
+
 <body>
-      <div class="image">
-           <img src="brokenheart.png" alt="brokenheart" class="center">
-       </div>
+        
 
        <header>
+            <div class="image1">
+                    <img src="brokenheart.png" alt="brokenheart" class="center">
+                </div>
     <div id="Name">Words to live by...
     <p>Lessons learned during nonsense chats with Betts</p>
     
