--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Project Iwas Sawi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" 
-    href="C:\Users\jasmi\OneDrive\Documents\code\MyPortfolio\css\MyPortfolio-style.css" />
+    href="css\MyPortfolio-style.css" />
     <script src="main.js"></script>
 </head>
 
